# Corallium

./: .gitignore  Cargo.toml  README.md  install.bat  install.sh  test.coral
demos/dinoGame/: exporter.js  main.cart  main.coral
demos/dinoGame/art/: Bird Flap.ase  Bird.ase  Cloud.ase  Comet.ase  Crouching Horse Walk.ase  Crouching Horse.ase  Dead Horse.ase  Horse Walk.ase  Horse.ase  Sand.ase  Sun.ase
demos/dinoGame/assets/: comet.tile
demos/dinoGame/assets/background/: Cloud.tile  Sky.tile  Sun.tile
demos/dinoGame/assets/bird/: base.tile  flap.tile
demos/dinoGame/assets/cactus/: big.tile
demos/dinoGame/assets/font/: 0.tile  6.tile  8.tile  9.tile  A.tile  B.tile  C.tile  D.tile  F.tile  H.tile  I.tile  K.tile  L.tile  M.tile  N.tile  P.tile  T.tile  V.tile  X.tile  Y.tile
demos/dinoGame/assets/horse/: base.tile  walk.tile
demos/strider/: main.palette  png_to_i32.js  strider.cart  strider.coral
demos/strider/art/: Catcus.ase  Cloud.ase  Horse Walk.ase  Sky.ase  Small Cactus.ase  colon.ase
demos/strider/assets/background/: Sand.tile
demos/strider/assets/cactus/: small.tile
demos/strider/linked/: boot_screen.bitmap  death.raw  mainTheme.raw  startup.raw  title.bitmap
docs/: coral.md
src/: algodrafting.txt  executable.rs  genstdlibs.rs  main.rs  test.rs  util.rs  vm.rs
src/compiler/: backend.rs  ir.rs  lexer.rs  mod.rs  parser.rs
src/devices/: audio.rs  clock.rs  disk.rs  gfx.rs  mod.rs  serial.rs
src/std/: audio.h  clock.h  disk.h  fs.coral  gfx.h  mem.coral  serial.h
test/: importTest.coral  imported.coral
(+20 files in other folders)
