[package]
name = "micro-16"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.8.0"
bincode = "1.3.3"
bitcode = "0.6.9"
byteorder = "1.5.0"

hound = "3.5.1"
minifb = { git ="https://github.com/DarkSystemGit/rust_minifb_pillarbox" }
prompted = "0.2.8"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tinyaudio = "2.0.0"
